# ai-powered-job-app-assistant

./: .dockerignore  .env.db  .env.example  .gitignore  .railwayignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  railway.toml  requirements.backend.txt  requirements.frontend.txt  requirements.txt  start.sh
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 00bfe1da15d7_create_users_tables.py  1ca57c78eddd_create_users_tables.py
app/: main.py  streamlit_app.py
app/api/v1/endpoints/: __init__.py  assistant.py  auth.py  job_analysis.py  jobs.py  letters.py  recruiter_search.py  resumes.py  users.py
app/core/: config.py  llm.py  logger.py  rag.py
app/crud/: resumes.py  user_crud.py
app/db/: database.py  deps.py
app/models/: users.py
app/schemas/: users.py
app/services/: check_result_type.py  resume_parser.py  security.py
streamlit_app/: main.py
streamlit_app/.streamlit/: config.toml
streamlit_app/core/: config.py
streamlit_app/pages/: dashboard.py  login.py  register.py
streamlit_app/pages/tabs/: cover_letter_tab.py  extract_resume_tab.py  info_tab.py  job_analysis_tab.py  match_candidates_tab.py
streamlit_app/services/: api_client.py
tests/: sample_job_descr.txt  sample_resume.txt  test_bad_endpoint_requests.py  test_core_llm.py  test_endpoints.py  test_llm.py
